--- a/GAButtonMapper/Properties/AndroidManifest.xml
+++ b/GAButtonMapper/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="0.5.2" package="com.lgplus.gabtmap" android:installLocation="auto" android:versionCode="8">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="0.6" package="com.lgplus.gabtmap" android:installLocation="auto" android:versionCode="9">
 	<uses-sdk android:minSdkVersion="26" android:targetSdkVersion="29" />
 	<application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -9,8 +9,12 @@
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
-  <uses-permission android:name="android.permission.RECORD_AUDIO" />
-  <!--
+	<uses-permission android:name="android.permission.RECORD_AUDIO" />
+	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
+	<uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
+	<uses-permission android:name="android.permission.BLUETOOTH" />
+	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+	<!--
   <uses-permission android:name="com.lge.qmemoplus.activity.permission.START_CAPTURE_PLUS" />
 	<permission android:name="com.lge.qmemoplus.receiver.permission.BROADCAST_CAPTURE_PLUS" android:protectionLevel="normal" />-->
 </manifest>
