--- a/GAButtonMapper/Properties/AndroidManifest.xml
+++ b/GAButtonMapper/Properties/AndroidManifest.xml
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="0.6.3" package="com.lgplus.gabtmap" android:installLocation="auto" android:versionCode="12">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:versionName="0.7.0" package="com.lgplus.gabtmap" android:installLocation="auto" android:versionCode="13">
 	<uses-sdk android:minSdkVersion="26" android:targetSdkVersion="29" />
-	<application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme"></application>
+	<application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme">
+		<provider android:name="android.support.v4.content.FileProvider" android:authorities="${applicationId}.provider" android:exported="false" android:grantUriPermissions="true" tools:replace="android:authorities">
+			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/fileprovider_path" tools:replace="android:resource" />
+		</provider>
+	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.READ_LOGS" />
 	<uses-permission android:name="android.permission.DUMP" />
@@ -15,8 +19,6 @@
 	<uses-permission android:name="android.permission.BLUETOOTH" />
 	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
-	<!--
-  <uses-permission android:name="com.lge.qmemoplus.activity.permission.START_CAPTURE_PLUS" />
-	<permission android:name="com.lge.qmemoplus.receiver.permission.BROADCAST_CAPTURE_PLUS" android:protectionLevel="normal" />-->
-	<application android:requestLegacyExternalStorage="true"></application>
+	<uses-permission android:name="com.lge.qmemoplus.receiver.permission.BROADCAST_CAPTURE_PLUS" />
+	<uses-permission android:name="android.permission.BIND_QUICK_SETTINGS_TILE" />
 </manifest>
