--- a/GAButtonMapper/Properties/AndroidManifest.xml
+++ b/GAButtonMapper/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:versionName="0.8.2" package="com.lgplus.gabtmap" android:installLocation="auto" android:versionCode="16">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:versionName="1.0.0" package="com.lgplus.gabtmap" android:installLocation="auto" android:versionCode="18">
 	<uses-sdk android:minSdkVersion="26" android:targetSdkVersion="29" />
 	<application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme">
 		<provider android:name="android.support.v4.content.FileProvider" android:authorities="${applicationId}.provider" android:exported="false" android:grantUriPermissions="true" tools:replace="android:authorities">
@@ -21,4 +21,5 @@
 	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 	<uses-permission android:name="com.lge.qmemoplus.receiver.permission.BROADCAST_CAPTURE_PLUS" />
 	<uses-permission android:name="android.permission.BIND_QUICK_SETTINGS_TILE" />
+	<uses-permission android:name="com.android.vending.BILLING" />
 </manifest>
